--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minesweeper</title>
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -17,6 +17,6 @@
     <h1>
       <center> 💣 MINESWEEPER </center>
     </h1>
-    <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
