--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <h1>
       <center> 💣 MINESWEEPER </center>
     </h1>
-    <script src="script.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
