--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
       <center> 💣 MINESWEEPER </center>
     </h1>
     <script src="sketch.js"></script>
+    <script src="mine.js"></script>
   </body>
 </html>
